--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -133,7 +133,6 @@
     top: 13px;
 }
 
-
 .navbar_menu.active .menu_icon {
     transform: rotate(-180deg);
     top: 25px;
@@ -142,7 +141,8 @@
     height: 30px;
 }
 
-.navbar_menu .menu_icon > #menu_icon_add, .link > svg {
+.navbar_menu .menu_icon > #menu_icon_add,
+.link > svg {
     font-size: 3rem;
     color: var(--color);
 }
@@ -159,9 +159,9 @@
     transition: all 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     z-index: 500;
     width: 100%;
-    height: 100vh;
+    height: var(--m-height);
     background: var(--theme);
-    gap:20px;
+    gap: 20px;
 }
 
 .navbar_menu.active .menu_tabs {
