--- a/src/CSS/skills.css
+++ b/src/CSS/skills.css
@@ -1,6 +1,6 @@
 .skills_container {
     height: auto;
-    min-height: 100vh;
+    min-height: var(--m-height);
     width: 100%;
     background: transparent;
     overflow: hidden;
@@ -8,7 +8,7 @@
 }
 
 .skills_container_inner {
-    height:auto;  
+    height: auto;
     min-height: inherit;
 }
 
@@ -48,7 +48,8 @@
     padding: 0.7rem 1rem;
     margin-right: 1rem;
     box-shadow: 0 0.1rem 0.2rem hsla(var(--code), 0%, 0%, 0.2),
-        0 0.1rem 0.5rem hsla(var(--code), 0%, 0%, 0.3), 0 0.2rem 1.5rem hsla(var(--code), 0%, 0%, 0.4);
+        0 0.1rem 0.5rem hsla(var(--code), 0%, 0%, 0.3),
+        0 0.2rem 1.5rem hsla(var(--code), 0%, 0%, 0.4);
 }
 
 .tag > span {
@@ -90,12 +91,10 @@
     text-decoration: none;
 }
 
-/*# Container #*/
-
 .glasscard {
     width: fit-content;
-    font-weight:700;
-    margin: 25px auto;
+    font-weight: 700;
+    margin: 25px auto 50px;
     padding: 25px 60px;
     -webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(20px);
@@ -103,35 +102,37 @@
     border: 1px solid var(--color);
 }
 
-.glasscard > ul {    
+.glasscard > ul {
     column-gap: 50px;
 }
 
-.skill_link{
+.skill_link {
     text-decoration: none;
     color: var(--text);
     gap: 20px;
     display: flex;
-    justify-content: flex-start;   
-    font-size: 3rem; 
+    justify-content: flex-start;
+    font-size: 3rem;
 }
 
-.glasscard, .skill_link{
+.glasscard,
+.skill_link {
     transition: 0.5s ease-in-out;
+    filter: drop-shadow(0.5px 0.5px 1.3px hsla(var(--code), 0%, 0%, 0.7));
 }
 
-.skill_link > img{
-    height:3.5rem;
+.skill_link > img {
+    height: 3.5rem;
     aspect-ratio: 1/1;
 }
 
 .glasscard:hover {
     background: hsl(var(--code), 100%, 98%);
-    box-shadow:0px 0px 60px var(--color);
+    box-shadow: 0px 0px 60px var(--color);
 }
 
-.glasscard:hover .skill_link{
-    color:var(--theme);
+.glasscard:hover .skill_link {
+    color: var(--theme);
 }
 
 @keyframes loop {
@@ -143,21 +144,21 @@
     }
 }
 
-@media (min-width: 769px ){
-    .glasscard ul:has(li:nth-child(21)) {
+@media (min-width: 769px) {
+    .glasscard ul:has(li:nth-child(15)) {
         columns: 2;
     }
-    .glasscard ul:has(li:nth-child(31)) {
+    .glasscard ul:has(li:nth-child(28)) {
         columns: 3;
     }
-    .glasscard ul:has(li:nth-child(41)) {
+    .glasscard ul:has(li:nth-child(40)) {
         columns: 4;
     }
 }
 
 @media (max-width: 768px) {
     #skill-container {
-        min-height: 100vh;
+        min-height: var(--m-height);
         height: 100%;
         display: flex;
         justify-content: center;
@@ -174,7 +175,22 @@
 
     .glasscard {
         background: hsl(var(--code), 100%, 97%);
-        box-shadow:0px 0px 60px var(--color);
+        box-shadow: 0px 0px 60px var(--color);
+    }
+
+    .glasscard .skill_link {
+        color: var(--theme);
+    }
+}
+
+@media (max-height: 600px) {
+    .glasscard {
+        background: hsl(var(--code), 100%, 98%) !important;
+        box-shadow: 0px 0px 60px var(--color);
+    }
+
+    .glasscard .skill_link {
+        color: var(--theme);
     }
 }
 
