--- a/src/CSS/website.css
+++ b/src/CSS/website.css
@@ -4,9 +4,8 @@
 }
 
 .scroll_top {
-    background: #ffffff23;
-    box-shadow: 0px 0px 3px #0000087e;
-    filter: drop-shadow(1px 1px 2px #000008);
+    background: hsla(var(--code), 0%, 100%, 0.137);
+    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     border-radius: 50%;
@@ -28,6 +27,7 @@
 
 #scroll_top {
     font-size: 6rem;
+    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
 }
 
 .site.active .scroll_top {
