--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -40,7 +40,6 @@
 
 .nav {
     color: var(--color);
-    z-index: 20000;
     cursor: pointer;
     background: unset;
     border: unset;
@@ -106,7 +105,7 @@
     background: linear-gradient(
         0deg,
         hsl(var(--bcode), 0%, 0%) 0%,
-        hsla(var(--bcode), 0%, 100%, 0) 100%
+        hsla(var(--bcode), 0%, 0%, 0) 100%
     );
     transition: all 0.5s ease-in-out;
     transform: translateY(170px);
@@ -128,7 +127,7 @@
 }
 
 .Card .CardData > h1 {
-    font-size: 3rem;
+    font-size: 4rem;
     opacity: 0;
     margin: 10px 0 7px 0;
     padding: 0 28px;
@@ -144,7 +143,7 @@
     transform: translateX(100px);
     text-transform: uppercase;
     transition: all 0.6s ease-in-out;
-    font-size: 1.1rem;
+    font-size: 1.8rem;
 }
 
 .Card .CardData .Navigation {
@@ -158,13 +157,13 @@
     opacity: 0;
     transform: translateY(100px);
     margin: 10px 10px 30px 30px;
-    font-size: 1.8rem;
+    font-size: 2.3rem;
     cursor: pointer;
     transition: all 0.7s ease-in-out;
 }
 
-.Navigation .material-symbols-rounded {
-    color: rgb(0, 119, 255);
+.Navigation .open_link {
+    color: var(--color);
     opacity: 0;
     transform: translateY(100px);
     transition: all 1s ease-in-out;
@@ -172,7 +171,6 @@
     text-decoration: none;
     font-size: 4rem;
     cursor: pointer;
-    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 }
 
 .Card:hover .CardData > h1 {
@@ -194,7 +192,7 @@
     transform: translateY(0px);
 }
 
-.Card:hover .CardData .Navigation .material-symbols-rounded {
+.Card:hover .CardData .Navigation .open_link {
     transform: translateY(0px);
     opacity: 1;
 }
@@ -222,18 +220,19 @@
     }
 
     .Card .CardData > h1 {
-        font-size: 1.8rem;
+        font-size: 2.8rem;
         padding: 0px 20px;
     }
 
     .Card .CardData > h6 {
-        font-size: 0.8rem;
+        font-size: 1.5rem;
         padding: 0px 20px;
+
     }
 
     .Card .CardData .Navigation > h3 {
         margin: 10px 10px 20px 20px;
-        font-size: 1.3rem;
+        font-size: 1.9rem;
     }
 
     .Navigation .material-symbols-rounded {
