--- a/src/CSS/website.css
+++ b/src/CSS/website.css
@@ -4,8 +4,9 @@
 }
 
 .scroll_top {
-    background: hsla(var(--code), 0%, 100%, 0.137);
+    background: hsla(var(--code), 0%, 100%, 0.1);
     filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    box-shadow: 2px 2px 4px var(--theme), inset 3px 3px 4px var(--theme);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     border-radius: 50%;
@@ -15,6 +16,7 @@
     padding: 5px 5px 2px 5px;
     z-index: 800;
     display: none;
+    border: 1px solid var(--text);
 }
 
 .scroll_top:hover {
@@ -27,7 +29,7 @@
 
 #scroll_top {
     font-size: 6rem;
-    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    filter: drop-shadow(1px 1px 2px hsla(var(--code), 0%, 0%));
 }
 
 .site.active .scroll_top {
