--- a/src/CSS/contact.css
+++ b/src/CSS/contact.css
@@ -71,14 +71,14 @@
     position: relative;
     padding: 20px 0;
     font-size: 2.5rem;
-    filter: drop-shadow(0.8px 0.8px 1.8px hsla( var(--code), 0%, 0%, 0.2));
+    filter: drop-shadow(0.8px 0.8px 1.8px hsla(var(--code), 0%, 0%, 0.2));
 }
 
 .textarea_out {
     display: block;
     position: relative;
     font-size: 2.5rem;
-    filter: drop-shadow(0.8px 0.8px 1.8px hsla( var(--code), 0%, 0%, 0.2));
+    filter: drop-shadow(0.8px 0.8px 1.8px hsla(var(--code), 0%, 0%, 0.2));
 }
 
 .input_out .input,
@@ -125,9 +125,9 @@
     top: 15px;
     left: 0;
     letter-spacing: 1px;
-    font-family: Philosopher, Montserrat, cursive;
+    font-family: var(--styled-font);
     z-index: 1;
-    filter: drop-shadow(1px 1px 2px hsla( var(--code), 0%, 0%, 0.4));
+    filter: drop-shadow(1px 1px 2px hsla(var(--code), 0%, 0%, 0.4));
 }
 
 .input_out > label > span {
@@ -152,17 +152,17 @@
     font-size: 2.5rem;
     border-radius: 25px;
     border: 1px solid transparent;
-    filter: drop-shadow(2px 2px 4px hsla( var(--code), 0%, 0%));
+    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
     background: var(--color);
     color: var(--text);
     transition: all 0.1s ease-in-out;
-    cursor: grab;
+    cursor: pointer;
     display: flex;
     gap: 8px;
     align-items: center;
     justify-content: center;
     letter-spacing: 2px;
-    text-shadow: 2px 2px 4px hsla( var(--code), 0%, 0%);
+    text-shadow: 2px 2px 4px hsla(var(--code), 0%, 0%);
     overflow: hidden;
 }
 
@@ -170,27 +170,28 @@
     opacity: 0 !important;
     transition: all 0.7s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     transform: translateX(-100px);
-    filter: drop-shadow(2px 2px 4px hsla( var(--code), 0%, 0%));
+    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
     margin-right: -30px;
     font-size: 3.5rem;
     rotate: 180deg;
 }
 
-.contact_form_out > button:hover > svg {
-    opacity: 1 !important;
-    transform: translateX(0px);
-    margin-right: 0px;
-}
+@media (min-width: 768px) and (min-height: 400px) {
+    .contact_form_out > button:hover > svg {
+        opacity: 1 !important;
+        transform: translateX(0px);
+        margin-right: 0px;
+    }
 
-.contact_form_out > button:hover {
-    transform: scale(1.005);
-    background: var(--theme);
-    border-color: var(--color);
-}
+    .contact_form_out > button:hover {
+        transform: scale(1.005);
+        background: var(--theme);
+        border-color: var(--color);
+    }
 
-.contact_form_out > button:active {
-    transform: scale(0.995);
-    cursor: grabbing;
+    .contact_form_out > button:active {
+        transform: scale(0.995);
+    }
 }
 
 @media (max-width: 768px) {
@@ -224,6 +225,7 @@
 
     .contact_form_out > button {
         margin: 0px auto;
+        width: 30rem;
     }
 
     .input_container,
