--- a/src/CSS/dialog.css
+++ b/src/CSS/dialog.css
@@ -1,12 +1,115 @@
+#dialog_outer {
+    backdrop-filter: blur(5px);
+    font-size: 2rem;
+}
+
+#dialog_outer > div:nth-child(3) > div {
+    background: var(--theme);
+    color: var(--text);
+}
+
+#dialog_heading {
+    text-transform: uppercase;
+    font-size: 3.2rem;
+    font-weight: 700;
+    text-align: left;
+    margin-right: 40px;
+}
+
+#dialog_date {
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 0.7;
+}
+
+#dialog_close {
+    position: absolute;
+    right: 20px;
+    top: 12px;
+    width: -moz-fit-content;
+    width: fit-content;
+    color: var(--color);
+}
+
+#dialog_close:hover {
+    background: hsla(var(--code), 0%, 100%, 0.1);
+    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    box-shadow: 2px 2px 4px var(--theme), inset 3px 3px 4px var(--theme);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+}
+
+#dialog_subheading {
+    font-size: 2rem;
+}
+
+#dialog_body_data {
+    padding: 12px;
+    font-size: 2.2rem;
+}
+
+#dialog_close > svg {
+    font-size: 4rem;
+    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+}
+
+#dialog_action_buttons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    row-gap: 10px;
+}
+
 #viewLinkCard {
     text-decoration: none;
-    background: var(--parrot);
-    border: 1.5px solid hsl(var(--code), 3%, 60%);
-    box-shadow: 2px 2px 6px hsla(var(--code), 0%, 0%, 0.5),
-        inset 0px 0px 15px hsla(var(--code), 0%, 100%, 0.588);
+    background: hsla(var(--code), 0%, 100%, 0.1);
+    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    box-shadow: 2px 2px 4px var(--theme);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    color: var(--color);
     border-radius: 8px;
-    color: var(--theme);
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 1.8rem;
+    font-weight: 700;
     padding: 7px 10px;
+    margin: 0;
+}
+
+#viewLinkCard:hover {
+    background: hsla(var(--code), 0%, 100%, 0.2);
+}
+
+@media (max-width: 768px) {
+    #dialog_heading {
+        font-size: 2.5rem;
+        margin-right: 20px;
+    }
+
+    #dialog_date {
+        font-size: 1.3rem;
+    }
+
+    #dialog_close {
+        position: absolute;
+        right: 2px;
+        top: 2px;
+        width: -moz-fit-content;
+        width: fit-content;
+        color: var(--color);
+    }
+
+    #dialog_subheading {
+        font-size: 2.2rem;
+    }
+
+    #dialog_body_data {
+        padding: 12px;
+        font-size: 2rem;
+    }
+
+    #dialog_close > svg {
+        font-size: 3.5rem;
+        filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    }
 }
