--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -108,13 +108,13 @@
     margin: 0;
     padding: 0;
     letter-spacing: 2px;
-    filter: drop-shadow(2px 2px 4px hsla( var(--code), 0%, 0%));
+    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
 }
 
 .home_container_inner > h1 {
     font-size: 10rem;
     font-weight: 600;
-    font-family: Philosopher, Montserrat, cursive;
+    font-family: var(--styled-font);
 }
 .home_container_inner > h1 > span {
     color: var(--color);
@@ -123,7 +123,7 @@
 .home_container_inner > h3 {
     font-size: 2.6rem;
     margin-top: 25px;
-    font-family: comfortaa, Philosopher, Montserrat, cursive;
+    font-family: comfortaa, var(--styled-font);
 }
 
 .home_container_inner > h3 > span {
