--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -6,7 +6,7 @@
 }
 
 .projects_container_inner {
-    height: 70vh;
+    height: calc(var(--m-height) - 200px);
     width: 100%;
     background: transparent;
     padding: 10px 0;
@@ -56,7 +56,7 @@
 .right > svg,
 .left > svg {
     font-size: 10rem;
-    filter: drop-shadow(2px 2px 4px hsla( var(--code), 0%, 0%));
+    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
 }
 
 .CardOut {
@@ -227,7 +227,6 @@
     .Card .CardData > h6 {
         font-size: 1.5rem;
         padding: 0px 20px;
-
     }
 
     .Card .CardData .Navigation > h3 {
@@ -242,10 +241,6 @@
 }
 
 @media (max-width: 550px) {
-    .projects_container_inner {
-        height: 60vh;
-    }
-
     .right > svg,
     .left > svg {
         font-size: 7.5rem;
@@ -254,11 +249,11 @@
 
 @media (max-width: 450px) {
     .projects_container {
-        min-height: 85vh;
+        min-height: 450px;
     }
 
     .projects_container_inner {
-        height: 50vh;
+        height: 350px;
     }
 }
 
