--- a/src/CSS/dialog.css
+++ b/src/CSS/dialog.css
@@ -6,6 +6,7 @@
 #dialog_outer > div:nth-child(3) > div {
     background: var(--theme);
     color: var(--text);
+    border: 2px solid var(--color);
 }
 
 #dialog_heading {
@@ -58,6 +59,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+    margin: 10px auto;
     row-gap: 10px;
 }
 
@@ -70,7 +72,7 @@
     backdrop-filter: blur(5px);
     color: var(--color);
     border-radius: 8px;
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     font-weight: 700;
     padding: 7px 10px;
     margin: 0;
@@ -82,12 +84,12 @@
 
 @media (max-width: 768px) {
     #dialog_heading {
-        font-size: 2.5rem;
+        font-size: 3rem;
         margin-right: 20px;
     }
 
     #dialog_date {
-        font-size: 1.3rem;
+        font-size: 2rem;
     }
 
     #dialog_close {
@@ -100,16 +102,16 @@
     }
 
     #dialog_subheading {
-        font-size: 2.2rem;
+        font-size: 2.8rem;
     }
 
     #dialog_body_data {
         padding: 12px;
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 
     #dialog_close > svg {
-        font-size: 3.5rem;
+        font-size: 4rem;
         filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
     }
 }
