--- a/src/CSS/dialog.css
+++ b/src/CSS/dialog.css
@@ -5,8 +5,10 @@
 
 #dialog_outer > div:nth-child(3) > div {
     background: var(--theme);
-    color: var(--text);
-    border: 2px solid var(--color);
+    color: hsl(var(--code, 358), 0%, 60%, .7);
+    border: 1px solid hsl(var(--code, 358), 81%, 49%, .7);
+    border-radius: 10px;
+    box-shadow: 2px 2px 4px var(--theme), inset 3px 3px 4px var(--theme);
 }
 
 #dialog_heading {
@@ -59,7 +61,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    margin: 10px auto;
+    margin: 10px 0;
     row-gap: 10px;
 }
 
@@ -72,7 +74,7 @@
     backdrop-filter: blur(5px);
     color: var(--color);
     border-radius: 8px;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     font-weight: 700;
     padding: 7px 10px;
     margin: 0;
