--- a/src/CSS/dialog.css
+++ b/src/CSS/dialog.css
@@ -5,7 +5,7 @@
 
 #dialog_outer > div:nth-child(3) > div {
     background: var(--theme);
-    color: hsl(var(--code, 358), 0%, 60%, .7);
+    color: var(--text);
     border: 1px solid hsl(var(--code, 358), 81%, 49%, .7);
     border-radius: 10px;
     box-shadow: 2px 2px 4px var(--theme), inset 3px 3px 4px var(--theme);
