--- a/src/CSS/about.css
+++ b/src/CSS/about.css
@@ -70,7 +70,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    filter: drop-shadow(var(--shadows));
     box-shadow: inset 1.2px 1.2px 6px hsla(var(--code), 0%, 0%);
 }
 
@@ -78,7 +78,7 @@
     margin: auto;
     height: 100%;
     width: 100%;
-    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    filter: drop-shadow(var(--shadows));
 }
 
 .timeline > li:nth-child(even) > .timeline-panel:before {
@@ -105,7 +105,7 @@
 }
 
 .timeline .timeline-panel > * {
-    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    filter: drop-shadow(var(--shadows));
     letter-spacing: 1px;
 }
 
