--- a/src/CSS/common.css
+++ b/src/CSS/common.css
@@ -14,5 +14,5 @@
     color: var(--color);
     letter-spacing: 3px;
     text-transform: capitalize;
-    filter: drop-shadow(2px 2px 3px hsla(var(--code), 0%, 0%, 1));
+    filter: drop-shadow(var(--shadows));
 }
