--- a/src/CSS/contact.css
+++ b/src/CSS/contact.css
@@ -71,14 +71,14 @@
     position: relative;
     padding: 20px 0;
     font-size: 2.5rem;
-    filter: drop-shadow(0.8px 0.8px 1.8px hsla(var(--code), 0%, 0%, 0.2));
+    filter: drop-shadow(1px 1px 1px hsla(var(--code), 10%, 0%, 0.2));
 }
 
 .textarea_out {
     display: block;
     position: relative;
     font-size: 2.5rem;
-    filter: drop-shadow(0.8px 0.8px 1.8px hsla(var(--code), 0%, 0%, 0.2));
+    filter: drop-shadow(1px 1px 1px hsla(var(--code), 10%, 0%, 0.2));
 }
 
 .input_out .input,
@@ -127,7 +127,7 @@
     letter-spacing: 1px;
     font-family: var(--styled-font);
     z-index: 1;
-    filter: drop-shadow(1px 1px 2px hsla(var(--code), 0%, 0%, 0.4));
+    filter: drop-shadow(var(--shadows));
 }
 
 .input_out > label > span {
@@ -152,7 +152,7 @@
     font-size: 2.5rem;
     border-radius: 25px;
     border: 1px solid transparent;
-    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    filter: drop-shadow(var(--shadows));
     background: var(--color);
     color: var(--text);
     transition: all 0.1s ease-in-out;
@@ -162,7 +162,7 @@
     align-items: center;
     justify-content: center;
     letter-spacing: 2px;
-    text-shadow: 2px 2px 4px hsla(var(--code), 0%, 0%);
+    text-shadow: var(--shadows);
     overflow: hidden;
 }
 
@@ -170,7 +170,7 @@
     opacity: 0 !important;
     transition: all 0.7s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     transform: translateX(-100px);
-    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    filter: drop-shadow(var(--shadows));
     margin-right: -30px;
     font-size: 3.5rem;
     rotate: 180deg;
