--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -4,6 +4,7 @@
     min-height: 100vh;
     z-index: 50;
 }
+
 @property --hue {
     syntax: "<integer>";
     inherits: true;
@@ -108,12 +109,13 @@
     margin: 0;
     padding: 0;
     letter-spacing: 2px;
-    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    filter: drop-shadow(var(--shadows));
 }
 
 .home_container_inner > h1 {
     font-size: 10rem;
-    font-weight: 600;
+    font-weight: 600;    
+    width: fit-content;
     font-family: var(--styled-font);
 }
 .home_container_inner > h1 > span {
@@ -123,6 +125,7 @@
 .home_container_inner > h3 {
     font-size: 2.6rem;
     margin-top: 25px;
+    width: fit-content;
     font-family: comfortaa, var(--styled-font);
 }
 
@@ -162,6 +165,29 @@
     background: var(--color);
     color: var(--text);
     border: 4px solid var(--text);
+    padding: 8px 6vw 8px 5vw;
+    font-weight: 700;
+}
+
+/*!  */
+
+#root:is(.active) > * .home_button_inner {
+    background: var(--color);
+    width: auto;
+    border-radius: 30px;
+}
+
+#root:is(.active) > * .home_button_inner > a {
+    background: var(--color);
+    color: var(--theme);
+    text-decoration: none;
+    font-weight: 700;
+}
+
+#root:is(.active) > * .home_button_inner > button {
+    background: var(--theme);
+    color: var(--color);
+    border: 4px solid var(--color);
     padding: 8px 6vw 8px 5vw;
 }
 
@@ -236,6 +262,9 @@ svg.tea {
     stroke-dasharray: 180px 278px;
 }
 
+#root:is(.active) > * .home_button_inner > a > svg {
+    stroke: var(--theme);
+}
 /*^----------------------------> MEDIA QUERY <----------------------------^*/
 
 @media (max-width: 768px) {
