--- a/src/CSS/homeIcons.css
+++ b/src/CSS/homeIcons.css
@@ -32,11 +32,11 @@
 #icons {
     color: var(--color);
     font-size: 4rem;
-    filter: drop-shadow(2px 2px 3px hsla(var(--code), 0%, 0%, 1));
+    filter: drop-shadow(var(--shadows));
 }
 
 #FooterName {
-    filter: drop-shadow(2px 2px 3px hsla(var(--code), 0%, 0%, 1));
+    filter: drop-shadow(var(--shadows));
 }
 
 @media (min-width: 768px) {
