--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -57,7 +57,7 @@
 .right > svg,
 .left > svg {
     font-size: 10rem;
-    filter: drop-shadow(2px 2px 4px hsla(var(--code), 0%, 0%));
+    filter: drop-shadow(var(--shadows));
 }
 
 .CardOut {
@@ -105,8 +105,8 @@
     top: 0;
     background: linear-gradient(
         0deg,
-        hsl(var(--bcode), 0%, 0%) 0%,
-        hsla(var(--bcode), 0%, 0%, 0) 100%
+        #000 0%,
+        #0000 100%
     );
     transition: all 0.5s ease-in-out;
     transform: translateY(170px);
