--- a/src/CSS/skills.css
+++ b/src/CSS/skills.css
@@ -79,7 +79,7 @@
     backdrop-filter: blur(10px);
     padding: 10px;
     border-radius: 10px;
-    filter: drop-shadow(2px 2px 6px var(--theme));
+    filter: drop-shadow(var(--shadows));
 }
 
 #skillName {
@@ -107,17 +107,21 @@
 
 .skill_link {
     text-decoration: none;
-    color: var(--text);
+    color: var(--color);
     gap: 20px;
     display: flex;
     justify-content: flex-start;
     font-size: 3rem;
 }
 
+body:has(.site.active) > * .skill_link {
+    color: var(--theme);
+}
+
 .glasscard,
 .skill_link {
     transition: 0.5s ease-in-out;
-    filter: drop-shadow(1px 1px 1px hsla(var(--code), 0%, 0%, 0.5));
+    filter: drop-shadow(var(--shadows));
 }
 
 .skill_link > img {
@@ -132,6 +136,11 @@
 
 .glasscard:hover .skill_link {
     color: var(--theme);
+}
+
+body:has(.site.active) > * 
+.glasscard:hover .skill_link {
+    color: var(--color);
 }
 
 @keyframes loop {
